# esnacc

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  FAQ.md  ReadMe.md  build.bat  build.sh  clang-format  esnacc.code-workspace  snacc.h  snacc_defines.h  version.h
.cursor/rules/: documentation-routing.mdc  line-endings.mdc  living-documentation.mdc  (+1 more)
ROSE/: SNACCROSE.asn1  makesnaccrose.bat
c-lib/: CMakeLists.txt
c-lib/boot/: tbl.c  tbl.h
c-lib/include/: asn-BMPString.h  asn-IA5String.h  asn-NumericString.h  asn-PrintableStr.h  asn-TeletexString.h  asn-UTF8String.h  asn-UniversalString.h  asn-VisibleString.h  asn-any.h  asn-bits.h  asn-bool.h  asn-config.h  asn-der.h  asn-enum.h  asn-incl.h  asn-int.h  asn-len.h  asn-list.h  asn-null.h  asn-octs.h  asn-oid.h  asn-real.h  asn-relative-oid.h  asn-tag.h  asn-useful.h  exp-buf.h  gen-buf.h  hash.h  junk.h  mem.h  min-buf.h  nibble-alloc.h  platform-functions.h  print.h  snaccCder.h  str-stk.h
c-lib/src/: asn-BMPString.c  asn-IA5String.c  asn-NumericString.c  asn-PrintableStr.c  asn-TeletexString.c  asn-UTF8String.c  asn-UniversalString.c  asn-VisibleString.c  asn-any.c  asn-bits.c  asn-bool.c  asn-der.c  asn-enum.c  asn-int.c  asn-len.c  asn-list.c  asn-null.c  asn-octs.c  asn-oid.c  asn-real.c  asn-relative-oid.c  asn-tag.c  asn-useful.c  asn1init.c  exp-buf.c  hash.c  mem.c  nibble-alloc.c  platform-functions.c  print.c  str-stk.c
compiler/: CMakeLists.txt  build_flex_bison.bat  compiler.rc  resource.h
compiler/back-ends/: comment-util.c  comment-util.h  cond.c  cond.h  str-util.c  str-util.h  structure-util.c  structure-util.h  tag-util.c  tag-util.h
compiler/back-ends/c++-gen/: cxxconstraints.c  cxxconstraints.h  cxxmultipleconstraints.c  cxxmultipleconstraints.h  gen-any.c  gen-any.h  gen-code.c  gen-code.h  gen-vals.c  gen-vals.h  kwd.c  rules.c  rules.h  types.c
compiler/back-ends/c-gen/: gen-any.c  gen-code.c  gen-dec.c  gen-enc.c  gen-free.c  gen-print.c  gen-type.c  gen-vals.c  kwd.c  rules.c  rules.h  type-info.c  type-info.h  util.c  util.h
compiler/back-ends/cs-gen/: gen-code.c  gen-code.h
compiler/back-ends/delphi-gen/: gen-delphi-code.c  gen-delphi-code.h
compiler/back-ends/delphi-gen/gluecode/: DelphiAsn1Types.pas
compiler/back-ends/hjs-gen/: gen-hjs-code.c  gen-hjs-code.h
compiler/back-ends/idl-gen/: gen-any.c  gen-code.c  gen-vals.c  rules.c  rules.h  types.c
compiler/back-ends/java-gen/: gen-java-code.c  gen-java-code.h
compiler/back-ends/js-gen/: gen-js-code.c  gen-js-code.h
compiler/back-ends/jses6-gen/: gen-jses6-code.c  gen-jses6-code.h
compiler/back-ends/jsondoc-gen/: gen-jsondoc-code.c  gen-jsondoc-code.h
compiler/back-ends/kotlin-gen/: gen-kotlin-code.c  gen-kotlin-code.h
compiler/back-ends/openapi-gen/: gen-openapi-code.c  gen-openapi-code.h
compiler/back-ends/swift-gen/: gen-swift-code-old.c  gen-swift-code-old.h  gen-swift-code.c  gen-swift-code.h  gen-swift-combined.c  gen-swift-combined.h
compiler/back-ends/ts-gen/: gen-ts-code.c  gen-ts-code.h  gen-ts-combined.c  gen-ts-combined.h  gen-ts-converter.c  gen-ts-converter.h  gen-ts-rose.c  gen-ts-rose.h
compiler/back-ends/ts-gen/gluecode/: SNACCROSE.ts  SNACCROSE_Converter.ts  TSASN1Base.ts  TSASN1BrowserClient.ts  TSASN1Client.ts  TSASN1NodeClient.ts  TSASN1Server.ts  TSConverterBase.ts  TSDeprecatedCallback.ts  TSInvokeContext.ts  TSOptionalParamConverter.ts  TSROSEBase.ts  methods.ts  types.ts
compiler/core/: asn-stringconvert.cpp  asn-stringconvert.h  asn1module.h  asn_commentparser.cpp  asn_commentparser.h  asn_comments.cpp  asn_comments.h  cpp_c_helper.cpp  cpp_c_helper.h  cpp_helper.cpp  cpp_helper.h  define.c  define.h  dependency.c  do-macros.c  efileressources.c  efileressources.h  enc-rules.c  enc-rules.h  err-chk.c  exports.c  exports.h  filetype.h  gen-tbls.c  incbin.h  lex-asn1.c  lex-asn1.l  lex-stuff.h  lib-types.c  lib-types.h  link-types.c  link-values.c  mem.c  mem.h  meta.c  meta.h  normalize.c  oid.c  parse-asn1.c  parse-asn1.h  (+15 more)
compiler/win_flex_bison/: FlexLexer.h
cpp-lib/: CMakeLists.txt
cpp-lib/ejsoncpp/: .clang-format  json_reader.cpp  json_tool.h  json_value.cpp  json_valueiterator.inl  json_writer.cpp  version.h.in
cpp-lib/ejsoncpp/include/: assertions.h  autolink.h  config.h  features.h  forwards.h  json.h  reader.h  value.h  version.h  writer.h
cpp-lib/include/: SNACCDeprecated.h  SNACCROSE.h  SnaccModuleVersions.h  SnaccROSEBase.h  SnaccROSEHelper.h  SnaccROSEInterfaces.h  SnaccTelemetry.h  asn-buf.h  asn-chartraits.h  asn-config.h  asn-incl.h  asn-list.h  asn-listset.h  asn-stringconvert.h  asn-usefultypes.h  init.h  meta.h  platform-specifics.h  snacc-assert.h  snaccdll.h  snaccexcept.h  syncevent.h  tcl-if.h
cpp-lib/jsoncpp/: json_reader.cpp  json_tool.h  json_value.cpp  json_valueiterator.inl  json_writer.cpp
cpp-lib/jsoncpp/include/: allocator.h  assertions.h  config.h  forwards.h  json_features.h  reader.h  value.h  writer.h
cpp-lib/src/: SNACCDeprecated.cpp  SNACCROSE.cpp  SnaccModuleVersions.cpp  SnaccROSEBase.cpp  SnaccROSEHelper.cpp  SnaccROSEInterfaces.cpp  SnaccTelemetry.cpp  asn-PERGeneral.cpp  asn-RelativeOid.cpp  asn-any.cpp  asn-bits.cpp  asn-bool.cpp  asn-buf.cpp  asn-bufbits.cpp  asn-enum.cpp  asn-extension.cpp  asn-fileseg.cpp  asn-int.cpp  asn-len.cpp  asn-null.cpp  asn-octs.cpp  asn-oid.cpp  asn-optionalparam.cpp  asn-real.cpp  asn-rvsbuf.cpp  asn-stringconvert.cpp  asn-stringocts.cpp  asn-stringtype.cpp  asn-systemtime.cpp  asn-tag.cpp  asn-type.cpp  asn-usefultypes.cpp  hash.cpp  meta.cpp  print.cpp  snaccdll.cpp  snaccexcept.cpp  syncevent.cpp  tcl-if.cpp  tkAppInit.c  (+1 more)
cpp-lib/tests/: CMakeLists.txt  async_invoke_tests.cpp  call_flow_tests.cpp  invoke_context_tests.cpp  lifecycle_tests.cpp  logging_tests.cpp  logical_failure_tests.cpp  public_api_tests.cpp  runtime_correctness_notes.md  telemetry_tests.cpp  transport_failure_tests.cpp
cpp-lib/tests/test_support/: sample_runtime_harness.h
docs/: build.md
samples/: .gitignore  create_stubs.bat  prepare.bat  prepare.js  prepare.sh  readme.md
(+239 files in other folders)
